--- a/escrito/bibliografia.bib
+++ b/escrito/bibliografia.bib
@@ -59,4 +59,11 @@
       year      = {1974},
       publisher = {Addison-Wesley}
     }
-    
+    @article{Lemire2019FasterRemainder,
+      author       = {Daniel Lemire and Owen Kaser and Nathan Kurz},
+      title        = {Faster remainder by direct computation: Applications to compilers and software libraries},
+      journal      = {arXiv preprint arXiv:1902.01961},
+      year         = {2019},
+      note         = {Disponible en línea},
+      url          = {https://arxiv.org/abs/1902.01961}
+    }
